[project]
name = "cadquery_png_plugin"
version = "2.0.0"
dependencies = [
  "cadquery"
]
requires-python = ">=3.10"

authors = [
  { name="naturecodec" }
]

maintainers = [
  { name="naturecodec" }
]

description = "A CadQuery PNG rendering plugin with improved edge detection and dataset-quality output."

readme = "README.md"
license = {file = "LICENSE"}

keywords = ["cadquery", "CAD", "rendering", "dataset"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/naturecodec-stack/cadquery-png-plugin1.git"
"Bug Tracker" = "https://github.com/naturecodec-stack/cadquery-png-plugin1/issues"